# flashcards-app

./: .gitignore  README.md  app.py  main.py  makefile  pyproject.toml
resources/: belgium_questions.csv  brazil_questions.csv  french_revolution_questions.csv  industrial_revolution.csv  industrial_revolution_questions.csv
templates/: flashcards.html  index.html
