[project]
name = "flashcards-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []pip

[project]
name = "flashcards-app"
version = "0.1.0"
description = "A flashcards app project with upload of questions and answers via .csv file."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Wallace Espindola", email = "wallace.espindola@gmail.com" }
]
license = { file = "LICENSE", text = "Apache License, Version 2.0" }
homepage = "https://www.wtechitsolutions.com/"
repository = "https://github.com/wallaceespindola/flashcards-app"
documentation = "https://github.com/wallaceespindola/flashcards-app"
keywords = ["flashcards", "python", "demo", "flask"]
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
LinkedIn = "https://www.linkedin.com/in/wallaceespindola/"
GitHub = "https://github.com/wallaceespindola"
Twitter = "https://twitter.com/wsespindola"
Gravatar = "https://gravatar.com/wallacese"
DevCommunityArticles = "https://dev.to/wallaceespindola"
DzoneArticles = "https://dzone.com/users/1254611/wallacese.html"
LinkedInArticles = "https://www.linkedin.com/in/wallaceespindola/recent-activity/articles/"
Slides = "https://speakerdeck.com/wallacese"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"
