[project]
name = "flashcards-app"
version = "1.0.0"
description = "A web-based flashcards application that allows users to upload and study flashcards from CSV files"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
    { name = "Wallace Espindola", email = "wallace.espindola@gmail.com" }
]
license = { file = "LICENSE", text = "Apache License, Version 2.0" }
keywords = ["flashcards", "python", "flask", "web-app", "education", "study-tool"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]

[project.urls]
Homepage = "https://www.wtechitsolutions.com/"
Repository = "https://github.com/wallaceespindola/flashcards-app"
Documentation = "https://github.com/wallaceespindola/flashcards-app"
LinkedIn = "https://www.linkedin.com/in/wallaceespindola/"
GitHub = "https://github.com/wallaceespindola"
Twitter = "https://twitter.com/wsespindola"
Gravatar = "https://gravatar.com/wallacese"
"Dev Community" = "https://dev.to/wallaceespindola"
"DZone Articles" = "https://dzone.com/users/1254611/wallacese.html"
"LinkedIn Articles" = "https://www.linkedin.com/in/wallaceespindola/recent-activity/articles/"
Slides = "https://speakerdeck.com/wallacese"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0"
]

[tool.setuptools]
packages = ["flashcards_app"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]
